--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron ./"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
