--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
   },
   "include": [
-    "./ts/**/*"
+    "src/**/*"
   ]
 }
