--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.5",
+    "@types/qs": "^6.9.1",
     "axios": "^0.19.2",
+    "qs": "^6.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
