--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron ./"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
     "@reduxjs/toolkit": "^1.3.5",
     "@types/qs": "^6.9.1",
     "axios": "^0.19.2",
