--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@reduxjs/toolkit": "^1.3.5",
+    "@types/chart.js": "^2.9.20",
     "@types/qs": "^6.9.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "qs": "^6.9.3",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
